# isale3D-prototype

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  benchmark.job  config.txt  out_0_30_1000.txt  out_0_30_1000_.txt  out_1_30_1000.txt  out_1_30_1000_.txt  plot.ipynb  scaling-7.txt  test.sh
include/: exchange_dt.h  kernels.h  setup.h  timer.h  utils.h
include/kernels/: exchange_dt.h  persistent_communication.h  shm.h
jobs/: run.pbs
jobs/exchange-dt/: Makefile  README.md  scaling-4.o874357  scaling-5.txt  scaling-7.o874346
jobs/exchange-dt-results/: Makefile  README.md  run.pbs  scaling-1.o874354  scaling-2.o874355  scaling-3.e874356  scaling-3.o874342  scaling-3.o874356  scaling-5.o874344  scaling-5.o874358  scaling-6.o874345  scaling-7.o874360
jobs/persistent-comm/: README.md  persistent-comm-benchmark.o879223  persistent-comm-benchmark.o879511  run.pbs
jobs/results/exchange-dt/: README.md  scaling-1.o874340  scaling-1.txt  scaling-2.o874341  scaling-2.txt  scaling-3.txt  scaling-4.o874343  scaling-4.txt  scaling-6.o874359  scaling-6.txt
jobs/results/shm/: run.pbs  shm-benchmark.o877686
jobs/shm/: README.md  run.pbs  shm-benchmark.o877674  shm-benchmark.o877691
src/: benchmark.cpp  setup.cpp  timer.cpp  utils.cpp  utils.h
